--- a/WIP/Tibl/templates/index.html
+++ b/WIP/Tibl/templates/index.html
@@ -86,14 +86,26 @@
 			</div>
 		</form>
 	</div>
-	{% if matching_classes %}
-	<ul>
-	{% for section in matching_classes %}
-		<div class="class-card">
-	        <a href="{% url 'class' section.id %}" class="card-text">{{ section.course.number }} - {{ section.course.name }}</a>
-	    </div>
+	{% if posts %}
+	{% for post in posts %}
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">
+				<a href="{% url 'friendprofile' post.poster.pk %}">
+					{{ post.poster.full_name }}
+				</a>
+			</h3>
+		</div>
+		<div class="panel-body">
+			{{ post.content }}
+		</div>
+		<div class="panel-footer">
+			<a href="{% url 'class' post.section.pk %}">
+				{{ post.section.course.department }} {{ post.section.course.number }}
+			</a>
+		</div>
+	</div>
 	{% endfor %}
-	</ul>
 	{% endif %}
 </div>
 <div class="col-md-3">
