--- a/WIP/Tibl/templates/classpage.html
+++ b/WIP/Tibl/templates/classpage.html
@@ -12,17 +12,22 @@
         {% for teacher in teachers %}
         <p>Instructor: <a href="#">{{ teacher.full_name }}</a></p> 
         {% endfor %}
-        <p>
-          <a href="/" class="btn btn-primary">Go to message feed</a>
-        </p>
+        <div class="col-md-6">
+          <div class="form-group border border-dark">
+            <form action="{% url 'register_section_previous' number %}" method="POST">
+              {% csrf_token %}
+              <input type="submit" class="btn btn-info" value="Add as Previous Class">
+            </form>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group border border-dark">
         <form action="{% url 'register_section_current' number %}" method="POST">
           {% csrf_token %}
           <input type="submit" class="btn btn-primary" value="Add as Current Class">
         </form>
-        <form action="{% url 'register_section_previous' number %}" method="POST">
-          {% csrf_token %}
-          <input type="submit" class="btn btn-primary" value="Add as Previous Class">
-        </form>
+      </div>
+    </div>
       </div>
     </section>
 
